<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/get_bt_address_instruction1"
                android:paddingBottom="0dp"/>

            <TextView
                android:id="@+id/txt_navigate_bt_address"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_bt_address_instruction_item_1" />
            <TextView
                android:id="@+id/abt_phone"
                android:textSize="15dp"
                android:textColor="@color/teal_700"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:text="click here."
                android:layout_marginBottom="10dp" />

            <TextView
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/get_bt_address_instruction_item_2" />
            <TextView
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/get_bt_address_instruction_item_3" />
            <TextView
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/get_bt_address_instruction_item_4" />

            <EditText
                android:id="@+id/text_bt_address"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:text=""
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible"
                android:background="@drawable/border"
                android:hint="Bluetooth Address"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dip"
                android:background="@android:color/darker_gray" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cancel_continue"
                   android:textSize="16dp"
                    android:textColor="@color/teal_700"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="40dp"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:paddingTop="36dp"
                    android:text="@string/cancel" />

                </TableRow>
        </LinearLayout>

    </ScrollView>


</LinearLayout>